@@ -10,10 +10,6 @@ repositories {
 
 dependencies {
 	implementation project(':control-core')
-
-	testImplementation platform('org.junit:junit-bom:5.11.4')
-	testImplementation 'org.junit.jupiter:junit-jupiter'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 application {
@@ -27,11 +23,6 @@ tasks.withType(JavaCompile).configureEach {
 }
 
 tasks.withType(JavaExec).configureEach {
-	jvmArgs '--add-modules', 'jdk.httpserver'
-}
-
-tasks.withType(Test).configureEach {
-	useJUnitPlatform()
 	jvmArgs '--add-modules', 'jdk.httpserver'
 }
 
